--- a/app/view/general/main.html
+++ b/app/view/general/main.html
@@ -108,8 +108,14 @@
 
                     <div class="caption">
 
-                        <a href="#/product/detailProduct/{{row}}">
-                            <p align="center"><img src="{{row.im_product_image.encoded}}" class="img-responsive" /></p>
+                        <a href="" ng-click="detailProduct(row)">
+                            <p align="center">
+                                <img src="{{row.im_product_image.encoded}}"
+                                     class="img-responsive"
+                                     height="300"
+                                     width="300"
+                                     />
+                            </p>
                         </a>
 
                         <p>{{row.ds_product}}</p>
@@ -117,8 +123,22 @@
                         <span class="text-gray"><strong>R$ {{row.nu_value}}</strong></span>
 
                         <div class="pull-right">
-                            <i class="glyphicon glyphicon-shopping-cart text-warning cursor-pointer" ng-click="addCart(row)"></i>
-                            <i class="glyphicon glyphicon-heart text-danger cursor-pointer" ng-click="addWishList(row.sq_product)"></i>
+
+                            <i class="glyphicon glyphicon-shopping-cart text-warning cursor-pointer"
+                               ng-click="addCart(row)"
+                               title="Colocar no carrinho">
+                            </i>
+
+                            <i class="glyphicon glyphicon-heart text-danger cursor-pointer"
+                               ng-click="addWishList(row.sq_product)"
+                               title="Colocar na lista de desejos">
+                            </i>
+
+                            <i class="glyphicon glyphicon-share text-info cursor-pointer"
+                               ng-click="share(row.sq_product)"
+                               title="Compatilhar na rede">
+                            </i>
+
                         </div>
 
                     </div>
