--- a/app/view/product/filterProduct.html
+++ b/app/view/product/filterProduct.html
@@ -11,7 +11,7 @@
 
                     <div class="caption">
 
-                        <a href="#/product/detailProduct/{{row.sq_product}}">
+                        <a href="" ng-click="detailProduct(row)">
                             <p align="center"><img src="{{row.im_product_image.encoded}}" class="img-responsive" /></p>
                         </a>
 
