--- a/app/view/product/cart.html
+++ b/app/view/product/cart.html
@@ -112,6 +112,10 @@
 
 </div>
 
+<button class="btn btn-sm btn-primary"
+        ng-click="getFareValue()">Calular frete
+</button>
+
 <!--pagination-->
 <button class="btn btn-default btn-sm" ng-click="currentPage = currentPage - 1" ng-disabled="currentPage == 0" >
     <i class="text-info glyphicon glyphicon-arrow-left"></i>
