--- a/app/view/product/addProduct.html
+++ b/app/view/product/addProduct.html
@@ -2,12 +2,12 @@
 
 <div class="row">
 
-    <div class="col-xs-12 col-sm-offset-2 col-sm-6 col-md-offset-2 col-md-6 col-lg-offset-2 col-lg-6 well well-sm" ng-show="row.ds_product != null">
+    <div class="col-xs-12 col-sm-offset-2 col-sm-6 col-md-offset-2 col-md-6 col-lg-offset-2 col-lg-6">
 
         <!--presentation-->
-        <h1 class="hidden-xs hidden-sm"><span class="text-primary text-capitalize" ng-bind="row.ds_product"></span></h1>
+        <h1 class="hidden-xs hidden-sm"><span class="text-primary" ng-bind="row.ds_product"></span></h1>
 
-        <h3 class="hidden-md hidden-lg"><span class="text-primary text-capitalize" ng-bind="row.ds_product"></span></h3>
+        <h3 class="hidden-md hidden-lg"><span class="text-primary" ng-bind="row.ds_product"></span></h3>
 
     </div>
 
@@ -16,16 +16,13 @@
 
 <form name="form" class="form-horizontal">
 
-    <!--ds_product hidden-->
-    <input name="ds_product" type="hidden" ng-model="row.ds_product" />
-
     <!--field name-->
     <div class="form-group">
         <label class="col-sm-2 control-label">Nome<span class="text-danger">*</span></label>
 
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 
-            <input class="form-control input-sm text-capitalize"
+            <input class="form-control input-sm"
                    placeholder="Nome do produto"
                    name="ds_product"
                    type="text"
