--- a/app/view/product/wishList.html
+++ b/app/view/product/wishList.html
@@ -87,7 +87,7 @@
                 <!--add in cart-->
                 <span
                     class="btn btn-primary btn-sm"
-                    ng-click="addCart(row.sq_product)"
+                    ng-click="addCart(row)"
                     title="Colocar no carrinho">
 
                     <i class="glyphicon glyphicon-shopping-cart"></i>
