[ADD] Fare value

--- a/app/view/product/upProduct.html
+++ b/app/view/product/upProduct.html
@@ -123,7 +123,7 @@
                        required />
             </div>
 
-            <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
+            <div class="help-block-input col-xs-12 col-sm-4 col-md-4 col-lg-4">
 
                 <span class="text-danger" ng-show="form.nu_value.$dirty && form.nu_value.$invalid">
                     <i class="glyphicon glyphicon-remove-sign"></i>
@@ -155,7 +155,7 @@
                        required />
             </div>
 
-            <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
+            <div class="help-block-input col-xs-12 col-sm-4 col-md-4 col-lg-4">
 
                 <span class="text-danger" ng-show="form.nu_height.$dirty && form.nu_height.$invalid">
                     <i class="glyphicon glyphicon-remove-sign"></i>
@@ -186,7 +186,7 @@
                        required />
             </div>
 
-            <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
+            <div class="help-block-input col-xs-12 col-sm-4 col-md-4 col-lg-4">
 
                 <span class="text-danger" ng-show="form.nu_width.$dirty && form.nu_width.$invalid">
                     <i class="glyphicon glyphicon-remove-sign"></i>
@@ -217,7 +217,7 @@
                        required />
             </div>
 
-            <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
+            <div class="help-block-input col-xs-12 col-sm-4 col-md-4 col-lg-4">
 
                 <span class="text-danger" ng-show="form.nu_length.$dirty && form.nu_length.$invalid">
                     <i class="glyphicon glyphicon-remove-sign"></i>
@@ -248,7 +248,7 @@
                        required />
             </div>
 
-            <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
+            <div class="help-block-input col-xs-12 col-sm-4 col-md-4 col-lg-4">
 
                 <span class="text-danger" ng-show="form.nu_weight.$dirty && form.nu_weight.$invalid">
                     <i class="glyphicon glyphicon-remove-sign"></i>
@@ -296,7 +296,7 @@
                        required/>
             </div>
 
-            <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
+            <div class="help-block-input col-xs-12 col-sm-4 col-md-4 col-lg-4">
 
                 <span class="text-danger" ng-show="form.nu_quantity.$dirty && form.nu_quantity.$invalid">
                     <i class="glyphicon glyphicon-remove-sign"></i>
@@ -327,7 +327,7 @@
                        required/>
             </div>
 
-            <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
+            <div class="help-block-input col-xs-12 col-sm-4 col-md-4 col-lg-4">
 
                 <span class="text-danger" ng-show="form.nu_production.$dirty && form.nu_production.$invalid">
                     <i class="glyphicon glyphicon-remove-sign"></i>
@@ -367,7 +367,7 @@
 
         <!--buttons-->
         <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
+            <div class="col-xs-12 col-sm-offset-2 col-sm-10 col-md-offset-2 col-md-10 col-lg-offset-2 col-lg-10">
 
                 <button type="submit" class="btn btn-primary btn-sm" ng-click="upProduct()" ng-Disabled="form.$invalid">Salvar
                     <i class="glyphicon glyphicon-save"></i>
