--- a/app/view/product/cart.html
+++ b/app/view/product/cart.html
@@ -1,7 +1,7 @@
-<legend><i class="glyphicon glyphicon-shopping-cart text-gray"></i> Carrinho de compras</legend>
+<legend class="text-gray font-18">Carrinho de compras</legend>
 
 <!--form buy-->
-<form name="form">
+<form name="form" class="form-group-sm">
 
     <!--loop-->
     <div class="row"
@@ -35,7 +35,7 @@
             <dl class="dl-horizontal">
 
                 <dt class="text-gray">Preço:</dt>
-                <dd>R$ {{row.nu_value}}</dd>
+                <dd>{{row.nu_value| currency}}</dd>
 
                 <dt class="text-gray">Em estoque:</dt>
                 <dd>{{row.nu_quantity}} Und</dd>
@@ -54,23 +54,27 @@
             <div class="col-xs-4 col-sm-3 col-md-2 col-lg-2">
 
                 <input
+                    id="{{row.sq_product}}"
                     class="form-control input-sm"
                     type="number"
-                    name="buy_nu_quantity"
-                    ng-model="row.buy_nu_quantity"
-                    maxlength="4"
+                    ng-model="row.nu_quantity_buy"
+                    maxlength="3"
                     ng-minlength="1"
-                    ng-maxlength="4"
+                    ng-maxlength="3"
+                    value="{{row.nu_quantity_buy? row.nu_quantity_buy : row.nu_quantity_buy = 1}}"
+                    ng-change="updateTotal()"
                     required
                     />
 
             </div>
 
-            <span class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-sm-offset-3 col-md-offset-2 col-lg-offset-2 text-danger" ng-show="form.buy_nu_quantity.$dirty && form.buy_nu_quantity.$invalid">
+            <span class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-sm-offset-3 col-md-offset-2 col-lg-offset-2 text-danger"
+                  ng-show="form.buy_nu_quantity.$dirty && form.buy_nu_quantity.$invalid">
+
                 <i class="glyphicon glyphicon-remove-sign"></i>
                 <span ng-show="form.buy_nu_quantity.$error.required">Campo obrigatório</span>
                 <span ng-show="form.buy_nu_quantity.$error.minlength">Mínimo de um caracteres</span>
-                <span ng-show="form.buy_nu_quantity.$error.maxlength">Máximo de quatro caracteres</span>
+                <span ng-show="form.buy_nu_quantity.$error.maxlength">Máximo de três caracteres</span>
                 <span ng-show="form.buy_nu_quantity.$error.number">Somente Números</span>
             </span>
 
@@ -106,70 +110,131 @@
 
     </div>
 
+    <legend class="text-gray font-18">Entrega</legend>
+
     <!--fare value-->
-    <div class="row">
+    <fieldset class="well">
 
-        <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 form-group"
-             ng-init="getFareValue(user.nu_postcode)">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+            <div class="row">
 
-            <div class="input-group">
+                <div class="form-horizontal" ng-init="user.nu_postcode? getFareValue(user.nu_postcode) : ''">
+                    <div class ="form-group form-group-sm">
 
-                <input
-                    class="form-control input-sm"
-                    placeholder="Calcular Frete"
-                    ng-model="user.nu_postcode"
-                    >
+                        <label class="col-xs-12 col-sm-4 col-md-4 col-lg-4 control-label">Pesquisa CEP</label>
 
-                <span class="input-group-btn">
+                        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                            <div class="input-group">
 
-                    <button class="btn btn-primary btn-sm" ng-click="getFareValue(user.nu_postcode)">
-                        Enviar
-                        <i class="glyphicon glyphicon-send"></i>
-                    </button>
+                                <input
+                                    class="form-control"
+                                    name="farevalue"
+                                    placeholder="72000000"
+                                    ng-model="user.nu_postcode"
+                                    maxlength="8"
+                                    ng-maxlength="8"
+                                    ng-minlength="7"
+                                    pattern="[0-9 -]+$"
+                                    required
+                                    />
 
-                </span>
+                                <span class="input-group-btn">
+
+                                    <button class="btn btn-primary btn-sm" ng-click="getFareValue(user.nu_postcode)">
+                                        Enviar
+                                        <i class="glyphicon glyphicon-send"></i>
+                                    </button>
+
+                                </span>
+
+                            </div>
+                        </div>
+
+                        <div class="help-block-input col-xs-12 col-sm-offset-4 col-sm-12 col-md-offset-4 col-md-12 col-lg-offset-4 col-lg-12">
+
+                            <span class="text-danger" ng-show="form.farevalue.$dirty && form.farevalue.$invalid">
+                                <i class="glyphicon glyphicon-remove-sign"></i>
+                                <span ng-show="form.farevalue.$error.required">Campo obrigatório.</span>
+                                <span ng-show="form.farevalue.$error.minlength">Mínimo de sete caracteres.</span>
+                                <span ng-show="form.farevalue.$error.maxlength">Máximo de oito caracteres.</span>
+                                <span ng-show="form.farevalue.$error.pattern">Somente números.</span>
+                            </span>
+
+                        </div>
+
+                    </div>
+                </div>
+
+                <!--address-->
+                <div class="row" ng-show="address">
+                    <div class="col-xs12 col-sm-offset-4 col-sm-8 col-md-8 col-lg-8">
+
+                        <span>{{address.log_tipo_logradouro}} {{address.logradouro}}<br />{{address.bairro}} | {{address.cidade}}-{{address.uf}}</span>
+
+                    </div>
+                </div>
+                <!--address-->
+
             </div>
-
         </div>
 
         <!--result fare value-->
-        <div class="col-xs12 col-sm-3 col-md-3 col-lg-3">
+        <div class="col-xs12 col-sm-6 col-md-6 col-lg-6 row" ng-show="fare">
+            <h5><strong>Escolha a forma de entrega</strong></h5>
+        </div>
 
-            <div class="radio"
-                 ng-repeat="row_fare in fare">
+        <!--field fare-->
+        <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+            <div class="row">
 
-                <label>
-                    <input
-                        class="checkbox"
-                        id="{{row_fare.Codigo}}"
-                        type="radio"
-                        value="{{row_fare.Codigo}}"
-                        ng-model="row.nu_farevalue"
-                        required
-                        />
+                <div class="radio">
 
-                    <b>{{row_fare.Codigo == 40010? "SEDEX": "PAC"}}</b>
+                    <label ng-repeat="row_fare in fare">
 
-                </label>
+                        <input
+                            id="{{row_fare.Codigo}}"
+                            type="radio"
+                            ng-change="updateTotal()"
+                            name="{{row_fare.Codigo}}"
+                            value="{{row_fare.Valor}}"
+                            ng-model="cart.nu_farevalue"
+                            required
+                            />
 
-                <span><b>Valor:</b> {{row_fare.Valor}}</span><br />
-                <span><b>Prazo de entrega:</b> {{row_fare.PrazoEntrega}} dia(s)</span>
+                        <span class="text-primary">{{row_fare.Codigo == 40010? "SEDEX": "PAC"}}</span><br />
+                        <span><b>Valor:</b>R${{row_fare.Valor}}</span><br />
+                        <span><b>Prazo de entrega:</b> {{row_fare.PrazoEntrega}} dia(s)</span>
+
+                    </label>
+
+                    <!--<legend></legend>-->
+
+                </div>
 
             </div>
-
-
         </div>
-        <!--result fare value-->
 
-        <div class="col-xs12 col-sm-12 col-md-12 col-lg-12">
+    </fieldset>
+    <!--result fare value-->
 
-            <p><b>Valor Total: R$</b>313131,00</p>
+    <legend class="text-gray font-18">Pagamento</legend>
 
-            <button class="btn btn-success btn-sm" ng-click="buy()" ng-disabled="form.$invalid">Comprar
+    <fieldset class="well" ng-init="updateTotal()">
+
+        <div class="form-inline">
+
+            <div class="form-group">
+                <label><strong>Valor Total: </strong><span class="text-success font-18">{{cart.nu_total| currency}}</span></label>
+            </div>
+
+            <button class="btn btn-success" ng-click="buy()" ng-disabled="form.$invalid">Comprar
                 <i class="glyphicon glyphicon-ok"></i>
             </button>
+
         </div>
 
-    </div>
+    </fieldset>
 
 </form>
+
+
