--- a/css/complemento.css
+++ b/css/complemento.css
@@ -246,3 +246,91 @@ input[readonly] {
     font-size: 18px;    
 }
 /*font12*/
+
+/** angular-loading-bar v0.8.0*/
+/* Make clicks pass-through */
+#loading-bar,
+#loading-bar-spinner {
+    pointer-events: none;
+    -webkit-pointer-events: none;
+    -webkit-transition: 350ms linear all;
+    -moz-transition: 350ms linear all;
+    -o-transition: 350ms linear all;
+    transition: 350ms linear all;
+}
+
+#loading-bar.ng-enter,
+#loading-bar.ng-leave.ng-leave-active,
+#loading-bar-spinner.ng-enter,
+#loading-bar-spinner.ng-leave.ng-leave-active {
+    opacity: 0;
+}
+
+#loading-bar.ng-enter.ng-enter-active,
+#loading-bar.ng-leave,
+#loading-bar-spinner.ng-enter.ng-enter-active,
+#loading-bar-spinner.ng-leave {
+    opacity: 1;
+}
+
+#loading-bar .bar {
+    -webkit-transition: width 350ms;
+    -moz-transition: width 350ms;
+    -o-transition: width 350ms;
+    transition: width 350ms;
+
+    background: #00CD00;
+    position: fixed;
+    z-index: 10002;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    border-bottom-right-radius: 1px;
+    border-top-right-radius: 15px;
+    box-shadow: #000 0px 0px 10px 0px;
+    margin-top: 1px;
+}
+
+/* Fancy blur effect */
+#loading-bar .peg {
+    position: absolute;
+    width: 1px;
+    right: 0;
+    top: 0;
+    height: 1px;
+    opacity: .10;
+    -moz-box-shadow: #2ecc71 1px 0px 10px 2px;
+    -ms-box-shadow: #2ecc71 1px 0px 10px 2px;
+    -webkit-box-shadow: #2ecc71 1px 0px 10px 2px;
+    box-shadow: #2ecc71 1px 0px 10px 2px;
+    -moz-border-radius: 100%;
+    -webkit-border-radius: 100%;
+    border-radius: 100%;
+}
+/** angular-loading-bar v0.8.0*/
+
+/*purchase adjusts*/
+@media screen and (min-width: 768px){
+
+    .fixed-purchase{
+        position: fixed;
+    }
+}
+/*purchase adjusts*/
+
+.zindex-back {
+    z-index: -99999;
+}
+
+.max-height-280{
+    max-height: 280px;
+}
+
+.overflow-y-auto {
+    overflow-y: auto;
+}
+
+.overflow-x-hidden {
+    overflow-x: hidden;
+}
