--- a/app/view/product/cart.html
+++ b/app/view/product/cart.html
@@ -1,4 +1,3 @@
-
 <div class="row">
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
 
@@ -67,6 +66,7 @@
                             ng-maxlength="3"
                             value="{{row.nu_quantity_buy? row.nu_quantity_buy : row.nu_quantity_buy = 1}}"
                             ng-change="updateTotal(true)"
+                            pattern="[0-9]+$"
                             required
                             />
 
@@ -184,7 +184,7 @@
                 </div>
 
                 <!--result fare value-->
-                <div class="col-xs12 col-sm-12 col-md-6 col-lg-6 row" ng-show="!fare.error && fare">
+                <div class="col-xs12 col-sm-12 col-md-6 col-lg-6 row" ng-show="!fare.error && fare && row.product.length">
                     <h5><strong>Escolha a forma de entrega</strong></h5>
                 </div>
 
@@ -192,7 +192,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                     <div class="row">
 
-                        <div class="radio" ng-show="!fare.error && fare">
+                        <div class="radio" ng-show="!fare.error && fare && row.product.length">
 
                             <label>
 
@@ -230,8 +230,6 @@
 
                         </div>
 
-                        <hr />
-
                         <div class="alert alert-danger" role=alert ng-show="fare.error">
                             <p>{{fare.error}}</p>
                         </div>
@@ -248,7 +246,7 @@
     <!--purchase summary-->
     <div class="col-xs-12 col-sm-offset-8 col-sm-4 col-md-4 col-lg-4 fixed-purchase">
 
-        <legend class="text-gray font-18">Resumo</legend>
+        <legend class="text-gray font-18">Resumo Parcial</legend>
 
         <!--loop-->
         <div class="max-height-280 overflow-y-auto overflow-x-hidden">
@@ -298,7 +296,7 @@
                     <label><strong>Valor Total: </strong><span class="text-success font-18">{{cart.nu_total| currency}}</span></label>
                 </div>
 
-                <button class="btn btn-success" ng-click="doBuy()" ng-disabled="form.$invalid">Comprar
+                <button class="btn btn-success" ng-click="prepareBuy()" ng-disabled="form.$invalid">Comprar
                     <i class="glyphicon glyphicon-ok"></i>
                 </button>
 
@@ -552,7 +550,101 @@
     </div>
 
 </div>
-
 <!--modal address-->
 
+<!--modal confirmation order-->
+<div class="modal fade" id="modalConfirmation" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 
+    <div class="modal-dialog">
+
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">x</span></button>
+                <h4 class="modal-title" id="myModalLabel">Confirmar compra</h4>
+            </div>
+
+            <div class="modal-body">
+
+                <!--loop-->
+                <div class="row">
+
+                    <!--product data-->
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+
+                        <table class="table table-condensed table-hover table-striped">
+                            <thead>
+                            <th>Quantidade</th>
+                            <th>Produto</th>
+                            <th>Valor</th>
+                            </thead>
+
+                            <tbody>
+
+                                <tr ng-repeat="row in cart">
+                                    <td>{{row.nu_quantity_buy? row.nu_quantity_buy : row.nu_quantity_buy = 1}}</td>
+                                    <td>{{row.ds_product}}</td>
+                                    <td>{{row.nu_quantity_buy * row.nu_value| currency}}</td>
+                                </tr>
+
+                                <tr>
+                                    <td>1</td>
+                                    <td>Taxa de entrega</td>
+                                    <td>{{cart.nu_farevalue| currency}}</td>
+                                </tr>
+
+                            </tbody>
+                        </table>
+
+                    </div>
+
+                </div>
+                <!--loop-->
+
+                <!--address-->
+                <p class="pull-left"><strong>Endereço para entrega</strong></p>
+
+                <div class="row" ng-show="address">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+
+                        <span>{{user.ds_address}} {{user.ds_complement}}<br />{{user.ds_neighborhood}} | {{user.ds_city}}-{{user.ac_state}}</span>
+
+                    </div>
+                </div>
+                <!--address-->
+                <hr />
+
+                <!--total purchase-->
+                <p><strong>Total da compra: </strong><span class="text-success font-18">{{cart.nu_total| currency}}</span></p>
+                <!--total purchase-->
+
+            </div>
+
+            <div class="modal-footer">
+
+                <!--buttons-->
+                <div class="form-group">
+                    <div class="col-sm-12">
+
+                        <div class="hidden-xs pull-left row"><strong>Confirma a compra?</strong></div>
+                        <div class=" hidden-sm hidden-md hidden-lg col-xs-5 pull-left text-left row"><strong>Confirma a compra?</strong></div>
+
+                        <button class="btn btn-default btn-sm" data-dismiss="modal">
+                            Não
+                            <i class="glyphicon glyphicon-remove"></i>
+                        </button>
+
+                        <button class="btn btn-success btn-sm" ng-click="">
+                            Confirmar
+                            <i class="glyphicon glyphicon-ok"></i>
+                        </button>
+
+                    </div>
+                </div>
+                <!--buttons-->
+
+            </div>
+        </div>
+    </div>
+</div>
+<!--modal confirmation order-->
