--- a/app/view/general/main.html
+++ b/app/view/general/main.html
@@ -126,11 +126,13 @@
 
                             <i class="glyphicon glyphicon-shopping-cart text-warning cursor-pointer"
                                ng-click="addCart(row)"
+                               ng-controller="purchaseController"
                                title="Colocar no carrinho">
                             </i>
 
                             <i class="glyphicon glyphicon-heart text-danger cursor-pointer"
                                ng-click="addWishList(row.sq_product)"
+                               ng-controller="purchaseController"
                                title="Colocar na lista de desejos">
                             </i>
 
